# jargonslayer

./: .env.local.example  .gitignore  LICENSE  NOTICE  README.md  README.zh-CN.md  index.html  next.config.mjs  package-lock.json  package.json  privacy.html  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  Info.plist  entitlements.plist  tauri.conf.json  tauri.ios.conf.json
apps/desktop/src-tauri/audiocap-helper/: .gitignore  Package.swift
apps/desktop/src-tauri/audiocap-helper/Resources/: Info.plist
apps/desktop/src-tauri/audiocap-helper/Sources/AudioCapCore/: AudioCapError.swift  AudioFormat.swift  Framing.swift  Interleave.swift  LocaleResolver.swift  OrphanSweep.swift  OsSpeechError.swift  PeakMeter.swift  ProcessTapCapture.swift  Ring.swift  ShutdownSignal.swift  SpeechAnalyzerSession.swift  StatusEvents.swift  StdinCommandMonitor.swift  TranscribeConsumer.swift  TranscriptEvents.swift  TranscriptThrottle.swift  Writer.swift
apps/desktop/src-tauri/audiocap-helper/Sources/CAudioCapAtomics/: shim.c
apps/desktop/src-tauri/audiocap-helper/Sources/CAudioCapAtomics/include/: CAudioCapAtomics.h
apps/desktop/src-tauri/audiocap-helper/Sources/jargonslayer-audiocap/: main.swift
apps/desktop/src-tauri/audiocap-helper/Tests/AudioCapCoreTests/: FramingTests.swift  LocaleResolverTests.swift  OrphanSweepTests.swift  PeakMeterTests.swift  SPSCByteRingTests.swift  SpeechAnalyzerSessionTests.swift  StdinCommandMonitorTests.swift  TranscribeConsumerTests.swift  TranscriptEventsTests.swift  TranscriptThrottleTests.swift  WriterTests.swift
apps/desktop/src-tauri/capabilities/: default.json  ios.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audiocap.rs  audiocap_batch.rs  audiocap_framing.rs  audiocap_pipeline.rs  audiocap_resample.rs  devspike_ios.rs  diskspace.rs  lib.rs  main.rs  mlxcaps.rs  oauth.rs  osspeech.rs  osspeech_ios.rs  paths.rs  provision.rs  secret.rs  server.rs  uv.rs
apps/desktop/src-tauri/tauri-plugin-os-speech/: Cargo.toml  README.md  build.rs
apps/desktop/src-tauri/tauri-plugin-os-speech/ios/: Package.swift  README.md
apps/desktop/src-tauri/tauri-plugin-os-speech/ios/Sources/OsSpeechCore/: LocaleResolver.swift  OsSpeechAssetInstaller.swift  OsSpeechController.swift  OsSpeechError.swift  OsSpeechSession.swift  OsSpeechWire.swift  PauseGenerationFence.swift  TranscriptThrottle.swift
apps/desktop/src-tauri/tauri-plugin-os-speech/ios/Sources/tauri-plugin-os-speech/: OsSpeechPlugin.swift
apps/desktop/src-tauri/tauri-plugin-os-speech/ios/Tests/OsSpeechCoreTests/: LocaleResolverTests.swift  OsSpeechWireTests.swift  PauseGenerationFenceTests.swift  TranscriptThrottleTests.swift
apps/desktop/src-tauri/tauri-plugin-os-speech/permissions/: default.toml  listeners.toml
apps/desktop/src-tauri/tauri-plugin-os-speech/permissions/autogenerated/: reference.md
apps/desktop/src-tauri/tauri-plugin-os-speech/permissions/schemas/: schema.json
apps/desktop/src-tauri/tauri-plugin-os-speech/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
apps/extension/: README.md  manifest.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/: .env.local.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docs/: AGENT-WORKFLOWS.md  ARCHITECTURE.md  DESIGN.md  PACKAGING.md  PRODUCT.md  SCHEMA.md  index.html
docs/design-explorations/: preview-1-shuimo.html  preview-2-grimoire.html  preview-3-8bit.html  preview-4-terminal.html  preview-5-noir.html  preview-6-sketch.html  preview-7-qinglv.html
docs/zh/: AGENT-WORKFLOWS.md  ARCHITECTURE.md  DESIGN.md  PACKAGING.md  PRODUCT.md  SCHEMA.md  index.html
public/: manifest.webmanifest
scripts/: build-audiocap.mjs  build-desktop.mjs  check-ios-plist.mjs  copy-ffmpeg-assets.mjs  fetch-uv.mjs  generate-app-icons.mjs  generate-bit-icons.mjs  ios-setup.sh
scripts/dictpacks/: build-edam-pack.mjs  build-ml-pack.mjs  build-stats-pack.mjs  enrich-zh.mjs  gen-compiled-packs.mjs  wiki-api.mjs
scripts/dictpacks/data/: curated-zh.json
sidecar/: agent_json.py  agent_postfilter.py  agent_prompts.py  agent_server.py  requirements-diar.txt  requirements-mlx.in  requirements-sidecar.txt  requirements.txt  test_agent_json.py  test_agent_postfilter.py  test_agent_server.py  test_download.py  test_ingest_url.py  test_lazy_load.py  test_model_registry.py  test_parakeet_backend.py  test_realtime_diar.py  test_whisper_protocol.py  whisper_server.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/review/: page.tsx
src/components/: CardsPanel.tsx  CornellNote.tsx  CredentialFields.tsx  GlossaryPanel.tsx  Header.tsx  HistoryDrawer.tsx  HoverGlossCard.tsx  ImportHub.tsx  ImportTranscriptDialog.tsx  LookupPopover.tsx  PixelDragon.tsx  PreviewLockedBadge.tsx  SettingsDialog.tsx  StatusLine.tsx  SummaryPanel.tsx  TaskTray.tsx  Toast.tsx  TranscriptPanel.tsx  TutorialOverlay.tsx
src/components/__tests__/: Header.render.test.tsx  Header.test.ts  HistoryDrawer.test.tsx  SettingsDialog.test.tsx  StatusLine.test.tsx  TaskTray.test.tsx  TranscriptPanel.render.test.tsx
src/components/review/: DueReview.tsx  PracticeDeck.tsx  ReviewDashboard.tsx  WordCloud.tsx
src/hooks/: useMeeting.ts  useProviderModels.ts
src/hooks/__tests__/: useMeeting.diag.test.ts  useMeeting.lifecycle.test.tsx  useProviderModels.test.ts
src/lib/: basePath.ts  cardLabels.ts  cornell.ts  highlight.ts  settingsSections.ts  store.ts  types.ts
src/lib/__tests__/: cornell.test.ts  highlight.test.ts  settingsSections.test.ts  store.test.ts
src/lib/agent/: localHost.ts
src/lib/detect/: dedupe.ts  dictionary-data.ts  dictionary.ts  packs.ts  remotePacks.ts  scheduler.ts
src/lib/diag/: globalHandlers.ts  log.ts  report.ts  requestId.ts
src/lib/history/: autoExport.ts  export.ts  glossary.ts  storage.ts
src/lib/ingest/: ffmpegExtract.ts  importAudio.ts  importText.ts  parseTranscript.ts  whisper.worker.ts  whisperBrowser.ts
src/lib/learn/: queue.ts  srs.ts  store.ts  suppress.ts
(+468 files in other folders)
