[package]
name = "jargonslayer"
version = "0.1.0"
description = "JargonSlayer desktop shell"
authors = ["Miana Zeng"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix is necessary to make the lib name unique and not
# conflict with the bin name — see tauri's own project template
# comment (this is a Windows-only build issue otherwise).
name = "jargonslayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"

# Single-instance is desktop-only (no Android/iOS support) — same
# target gate the plugin's own setup docs recommend for `cargo add`.
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
