[package]
name = "jargonslayer"
version = "0.1.0"
description = "JargonSlayer desktop shell"
authors = ["Miana Zeng"]
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix is necessary to make the lib name unique and not
# conflict with the bin name — see tauri's own project template
# comment (this is a Windows-only build issue otherwise).
name = "jargonslayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
# Chunk 3's own command/event payload structs (AppPaths, ProcessResult,
# UvLogEvent, ...) — already resolved transitively via tauri itself, made
# explicit here since this crate's own code derives Serialize directly.
serde = { version = "1", features = ["derive"] }
# S4 chunk 2 — was ONLY a transitive dependency (via tauri and others,
# see Cargo.lock) until server.rs's classify_download_line started
# parsing --download-only's NDJSON stdout lines directly; made explicit
# now that this crate's own code calls serde_json::from_str itself.
serde_json = "1"

# Single-instance is desktop-only (no Android/iOS support) — same
# target gate the plugin's own setup docs recommend for `cargo add`.
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
