[package]
name = "tauri-plugin-os-speech"
version = "0.1.0"
authors = ["Miana Zeng"]
description = "JargonSlayer iOS native plugin: in-process SpeechAnalyzer 系统识别 session (S13)"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-os-speech"

[dependencies]
tauri = { version = "2.11.3" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }
